--- a/generator/ChangeLog
+++ b/generator/ChangeLog
@@ -38,3 +38,8 @@
 	- not parsing file if it doesn't match /^NS.*\.h/
 	- processing @objC list after we finish with the entire file
 	- created stub for creating C Sharp wrapper
+
+2004-06-15	C.J. Collier	<cjcollier@colliertech.org>
+	* genstubs.pl (parseFile)
+	- commented empty .cs file generator
+	
