Add CVS headers comments, authors and Copyright info, feel free to add your name or change what is appropriate
svn path=/trunk/cocoa-sharp/; revision=29682

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-C.J. Collier <cjcollier@colliertech.org>
-Urs C. Muff
-Kangaroo
+C.J. Collier, Collier Technologies, <cjcollier@colliertech.org>
+Urs C. Muff, Quark Inc., <umuff@quark.com>
+Kangaroo, Geoff Norton
 Adham Findlay
