Updated AUTHORS list, included cocoa-sharp@lists.ximian.com
svn path=/trunk/cocoa-sharp/; revision=31703

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,8 @@
-C.J. Collier, Collier Technologies, <cjcollier@colliertech.org>
-Urs C. Muff, Quark Inc., <umuff@quark.com>
+Please direct all correspondence to cocoa-sharp@lists.ximian.com
+
+C.J. Collier, Collier Technologies
+Adhamh Findlay
+Urs C. Muff, Quark Inc.
 Kangaroo, Geoff Norton
-Adham Findlay
+Andy Satori
+
