Updated packaging script for CocoaSharp.  Along with postflight scrips so that links are created.
Added some documenation to README and autogen.sh
Added the mono.icns file to our example nib so that it could be built
        without the rest of Cocoa-Sharp source.

svn path=/trunk/cocoa-sharp/; revision=31831

--- a/README
+++ b/README
@@ -7,7 +7,8 @@ cd monodoc; make; make run
 
 to see tests
 cd test; make
+
+run and run2 are special targets that will build and run CocoaSharpBrowser.app 
+and CocoaSharpFinder.app
 make run
 make run2
-./CocoaSharpBrowser
-./CocoaSharpFinder
