--- a/generator/ChangeLog
+++ b/generator/ChangeLog
@@ -1,5 +1,11 @@
 2005-01-10  Geoff Norton  <gnorton@customerdna.com>
 
+	* custom/Foundation/TypeConverter.cs: Handle more objc name munging
+	* custom/AppKit/Application.cs: Create a NSAutoreleasePool for 
+	mono 1.1.3 loaderless mode.
+
+2005-01-10  Geoff Norton  <gnorton@customerdna.com>
+
 	* custom/Foundation/TypeConverter.cs: Handle NSColor name munging.
 	* gen-out/Method.cs: Call getType on structs; not pass ValueType to 
 	the invoker.
