--- a/src/CocoaSharp.Glue/ChangeLog
+++ b/src/CocoaSharp.Glue/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-13  Geoff Norton  <gnorton@customerdna.com>
+
+	* Glue.m (GetObjectSuperClassName): Implement this method to allow
+	walking up the class chain to find a known type.
+
 2005-01-10  Geoff Norton  <gnorton@customerdna.com>
 
 	* Glue.m (glue_initWithFrame): Implement this method to allow custom
