--- a/generator/ChangeLog
+++ b/generator/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-23  Geoff Norton  <gnorton@customerdna.com>
+
+	* BUGS: Drop me I'm ancient
+
 2005-01-17  Geoff Norton  <gnorton@customerdna.com>
 
 	* custom/Foundation/ObjCMessaging.cs: Convert enums to their
