--- a/src/Cocoa/ChangeLog
+++ b/src/Cocoa/ChangeLog
@@ -1,3 +1,7 @@
 2005-12-01  Geoff Norton  <gnorton@customerdna.com>
 
+	* Makefile.am: Disable warnings for 0169
+                                        
+2005-12-01  Geoff Norton  <gnorton@customerdna.com>
+
 	* Initial import     
