--- a/samples/ChangeLog
+++ b/samples/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-02  Geoff Norton  <gnorton@customerdna.com>
+
+	* CocoaDoc.cs: Add to the samples.
+
 2005-12-01  Geoff Norton  <gnorton@customerdna.com>
 
 	* Initial import     
