--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-12  Geoff Norton  <gnorton@customerdna.com>
+
+	* autogen.sh: Lower the required autoconf version to 2.57.  
+	Fixes SVN builds on Panther.  Thanks to Andreas Farber 
+	<andreas.faerber@web.de>
+
 2005-12-01  Geoff Norton  <gnorton@customerdna.com>
 
 	* Makefile.am: Include the samples in the default build
