--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-14  Geoff Norton  <gnorton@customerdna.com>
+
+	* Various autotools changes to allow 0.9.0 distribution 
+
 2005-12-12  Geoff Norton  <gnorton@customerdna.com>
 
 	* autogen.sh: Lower the required autoconf version to 2.57.  
