--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-15  Geoff Norton  <gnorton@customerdna.com>
+
+	* Makefile.am: Fix for distribution
+	* cocoa-sharp.source: Add to svn
+
 2005-12-01  Geoff Norton  <gnorton@customerdna.com>
 
 	* Initial import     
