2005-12-15  Geoff Norton  <gnorton@customerdna.com>
        * Makefile.am: Fix typos
             

svn path=/trunk/cocoa-sharp/; revision=54499

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,5 +1,9 @@
 2005-12-15  Geoff Norton  <gnorton@customerdna.com>
 
+	* Makefile.am: Fix typos
+
+2005-12-15  Geoff Norton  <gnorton@customerdna.com>
+
 	* Makefile.am: Fix for distribution
 	* cocoa-sharp.source: Add to svn
 
