--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+2005-12-17  Andreas Faerber  <andreas.faerber@web.de>
+
+	* Makefile.am: Dont copy missing config files.
+
 2005-12-15  Geoff Norton  <gnorton@customerdna.com>
 
 	* Makefile.am: Fix typos
