--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-18  Geoff Norton  <gnorton@customerdna.com>
+
+	* Makefile.am: Fix the commit from yesterday to include
+	all of Andreas's changes.
+
 2005-12-17  Andreas Faerber  <andreas.faerber@web.de>
 
 	* Makefile.am: Dont copy missing config files.
