--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-20  Geoff Norton  <gnorton@customerdna.com>
+
+	* configure.in:  Sync to local 0.9.3 tree.
+
 2005-12-14  Geoff Norton  <gnorton@customerdna.com>
 
 	* configure.in:  Bump version to 0.9.1
