--- a/src/Cocoa/ChangeLog
+++ b/src/Cocoa/ChangeLog
@@ -1,3 +1,10 @@
+2006-04-20  Geoff Norton  <gnorton@customerdna.com>
+
+	* Interop/ObjCInterop.cs (Dispatch): Make public so that the new
+	verifier doesn't complain about calling this.
+	* Interop/ObjCMethod.cs: Make the emitted delegate wrappers public so
+	the new verifier doesn't complain.
+
 2006-02-16  Geoff Norton <gnorton@customerdna.com>
 
 	* Refactored everything to the new Object and backend APIs.  There is no more
