Update View.cs with IsOpaque event handler method
svn path=/trunk/cocoa-sharp/; revision=74226

--- a/src/Cocoa/ChangeLog
+++ b/src/Cocoa/ChangeLog
@@ -1,3 +1,8 @@
+
+2007-04-13 Todd Schavey <schaveyt@gmail.com>
+
+	* View.cs: Added IsOpaque() event handler method
+
 2007-04-11 Todd Schavey <schaveyt@gmail.com>
 
 	* Cursor.cs: Added to repository
