--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-28  Andrew Jorgensen  <ajorgensen@novell.com>
+
+	* configure.in: Bump version to 0.9.5
+
 2007-03-12  David Hudson <jendave@yahoo.com>
 	
 	* samples/DragNDrop.cs:
